--- a/Tutorial2/Source/log.html
+++ b/Tutorial2/Source/log.html
@@ -34,7 +34,7 @@
                             <span id="error_message"> </span>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6">
-                            <a onClick = "location.href = 'http://localhost:63342/lab2/reg.html?_ijt=r0olcel9t5sgmqpromm2mqok8o';" class="btn btn-lg btn-primary btn-block">Register</a>
+                            <a onClick = "location.href = 'reg.html';" class="btn btn-lg btn-primary btn-block">Register</a>
                         </div>
                     </div>
                 </fieldset>
