--- a/Tutorial3/Source/Login.html
+++ b/Tutorial3/Source/Login.html
@@ -34,7 +34,7 @@
                             <span id="error_message"> </span>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6">
-                            <a onClick = "location.href = 'reg.html';" class="btn btn-lg btn-success btn-block">Register</a>
+                            <a onClick = "location.href = 'register.html';" class="btn btn-lg btn-success btn-block">Register</a>
                             <br>
                         </div>
                         <div id="status"></div>
