--- a/Tutorial8/Source/sourcecode/www/mainPage.html
+++ b/Tutorial8/Source/sourcecode/www/mainPage.html
@@ -112,6 +112,8 @@
           </p>
 
     </div>
+       <center> <button class="button button-positive  button-block" ng-click="vibration()">Vibrate</button></center>
+
   </div>
 
 
@@ -120,6 +122,12 @@
   -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
   <script src="js/app.js"></script>
+    <script>
+    angular.module("vib",['ngCordova'])
+.controller("HomeCtrl",function ($scope,$http,$cordovaVibration) {
+    $scope.vibration = function () {
+        $cordovaVibration.vibrate(1000); 
+    }</script>
 
 
 </body>
